# spacefight

./: Cargo.toml  Passwords.kdbx  README.md
src/: main.rs  ship.rs  stats.rs
src/ship/: collision.rs  constants.rs  specs.rs  units.rs
