[package]
name = "spacefight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimensioned = "0.8.0"
enum_dispatch = "0.3.13"
ggez = "0.9.3"
nalgebra = "0.33.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
typenum = "1.17.0"
